# AI-PI

./: .gitignore  README.md  examplesmmapis.json  image_processing_log.json  lm_config.yaml  moms_addition  pyproject.toml  requirements.md  reviewed_document.docx
ai_pi/: chat.py  context_agent.py  document_output.py  document_preprocessing.py  embed_documents.py  reviewer_agent.py  workflow.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/components/: ApiStatusIndicator.jsx  DocumentDownload.jsx  DocumentUpload.jsx  DocumentViewer.jsx  OfficeScene.jsx
src/: document_preprocessing.py  embed_documents.py  embedding_models.py  lm_config.yaml  modular_workflow.py
src/ai_pi/: context_agent.py  document_output.py  document_preprocessing.py  lm_config.py  main.py  modular_workflow.py  package-lock.json  temp_prompts.py  workflow.py  workflow2.py
src/ai_pi/analysis/: generate_storm_context.py  modular_summarizer.py  review_approach.md  review_criteria.json  reviewer.py  reviewer_generic.py  summarizer.py  testing.py
src/ai_pi/core/: llm_pipeline.py  lm_pipeline.py
src/ai_pi/core/utils/: logging.py
src/ai_pi/document_handling/: document_ingestion.py  document_output.py  marker_extract_from_pdf.py  section_identifier.py
src/ai_pi/documents/: document_ingestion.py  document_output.py  marker_extract_from_pdf.py  pdffigures2_extract.py  section_identifier.py  text_utils.py
src/ai_pi/llm/: context.py  o1_reviewer.py  reviewer.py
src/dspy_workflow_builder/: .gitignore  README.md  lm_config.py  lm_config.yaml.example  lm_pipeline.py  parse_lm_config.py  pipeline.py  processors.py  steps.py  types.py
src/dspy_workflow_builder/utils/: logging.py  text_utils.py
